--- a/.github/workflows/lint_and_package.yml
+++ b/.github/workflows/lint_and_package.yml
@@ -8,24 +8,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
-    - name: Install CI Utilities
+        python-version: '3.11'
+        cache: 'pip'
+
+    - name: Install CI Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -U black flake8 setuptools twine wheel
+        pip install pip-tools
+        pip-compile --extra dev -o - pyproject.toml | pip install -r /dev/stdin -U
 
     - name: Lint
       run: |
-        flake8
         black --check .
+        ruff check .
 
     - name: Package
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
         twine check dist/*
 
     - name: Publish to Test PyPI
@@ -35,7 +38,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
         TWINE_REPOSITORY_URL: https://test.pypi.org/legacy/
       run: |
-        twine upload dist/*
+        twine upload dist/*.whl
 
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
@@ -43,4 +46,4 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        twine upload dist/*
+        twine upload dist/*.whl
