--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ classifiers = [
   "Development Status :: 5 - Production/Stable",
 ]
 
+[build-system]
+requires = ["setuptools >= 78.0"]
+build-backend = "setuptools.build_meta"
+
 dependencies = [
   "hidapi==0.14.*",
 ]
@@ -40,18 +44,17 @@ control-delcom904x = "delcom904x.cli:main"
 
 [tool.black]
 line-length = 88
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.venv
-  | build
-  | dist
-)/
-'''
 
 [tool.ruff]
 target-version = "py312"
 
 [tool.ruff.lint]
 ignore = ["E501"]
+select = [
+  "E",   # pycodestyle
+  "F",   # pyflakes
+  "UP",  # pyupgrade
+  "B",   # flake8-bugbear
+  "SIM", # flake8-simplify
+  "I",   # isort
+]
